2008-05-13 Jim Garlick <garlick@llnl.gov>

	* config/*, Makefile.in, configure, INSTALL : 
	Checked in bootstrap products.

2008-05-12 Jim Garlick <garlick@llnl.gov>

	* : Integrated with automake/autoconf.

2008-05-07 Jim Garlick <garlick@llnl.gov>

	* getquota.c : Factor common code from repquota.c and quota.c.
	Add test hooks.

	* quota.c : Use a List to manage quota results like repquota.
	Allow unqualified uid's to be passed in for testing.
	
2008-05-06 Jim Garlick <garlick@llnl.gov>

	* util.c : Add lsd_* error handling functions.

	* Makefile : Add LSD_* to CFLAGS.

	* getquota_nfs.c : Only allow root to query another's quota.

2008-05-05 Jim Garlick <garlick@llnl.gov>

	* repquota.c : Add HAS_GETOPT_LONG.  Add root check.

2008-05-02 Jim Garlick <garlick@llnl.gov>

	* repquota.c : Add -u option to report only usage information.

2008-05-02 Jim Garlick <garlick@llnl.gov>

	* : tag 1.9

2008-05-01 Jim Garlick <garlick@llnl.gov>

	* getquota.c : Implement fs-neutral getquota() interface.

	* repquota.c : Quota reporting program.

	* list.[ch]: New from lsd-tools.

2008-05-01 Jim Garlick <garlick@llnl.gov>

	* quota.c : Add initial support for Lustre quotas.
	Rewrite crufty reporting functions.
	Add repquota functionality.

	* getquota.h : New generic quota structure so results from
	getquota_nfs() and getquota_lustre() can look identical.

	* getquota_nfs.c : Factor out nfs-specific quota code.

	* getquota_lustre.c : New lustre-specific quota code.

	* util.c : Factor out common code.

	* getconf.c : Add getconfdesc() and getconfdescsub().
	Allow hash-comments in quota.conf file.

	* rquota.x : Rename from quota.x to avoid confusion.

2008-04-18 Jim Garlick <garlick@llnl.gov>

	* quota.c : Fix bug with quota -lv, documented in
	https://chaos.llnl.gov/bugzilla/show_bug.cgi?id=301

	* : tag 1.8

2007-10-29 Jim Garlick <garlick@llnl.gov>

	* quota.spec : Change Conflicts: to Obsoletes: [Trent D'Hooge]

	* : tag 1.7

2007-10-22 Jim Garlick <garlick@llnl.gov>
