@@ -26,23 +26,23 @@ Run without arguments, \fIquota\fR only reports quota violations.
 It is intended to run in a login script to notify users when they
 need to take action.  The following arguments are available:
 .TP 
-.I "-v"
+\fI-v\fR, \fI--verbose\fR
 Report on file systems even if quota limits are not exceeded.
 .TP
-.I "-l"
+\fI-l\fR, \fI--login\fR
 Report only the file system corresponding to the user's home directory.
 .TP
-.I "-t sec"
+\fI-t\fR, \fI--timeout\fR \fIseconds\fR
 Set a timeout for all quota processing.
 .TP
-.I "-r"
+\fI-r\fR, \fI--realpath\fR
 Display real file system paths rather than descriptive versions from the
 config file.
 .TP
-.I "-f configfile"
+\fI-f\fR, \fI--config\fR \fIconfigfile\fR
 loads a configuration file other than the default (see FILES below).
 .TP
-.I "user"
+\fIuser\fR
 View the quota of another user.
 .SH "FILES"
 /etc/quota.conf
